--- a/app/src/main/res/navigation/auth_nav.xml
+++ b/app/src/main/res/navigation/auth_nav.xml
@@ -28,6 +28,9 @@
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_recipeActivity"
+            app:destination="@id/recipeActivity" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
