--- a/app/src/main/res/navigation/auth_nav.xml
+++ b/app/src/main/res/navigation/auth_nav.xml
@@ -18,7 +18,8 @@
         <action
             android:id="@+id/action_splashFragment_to_recipeActivity"
             app:destination="@id/recipeActivity"
-            app:popUpTo="@id/recipeActivity" />
+            app:popUpTo="@id/auth_nav"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -30,7 +31,8 @@
             app:destination="@id/registerFragment" />
         <action
             android:id="@+id/action_loginFragment_to_recipeActivity"
-            app:destination="@id/recipeActivity" />
+            app:destination="@id/recipeActivity"
+            app:popUpTo="@id/auth_nav" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
