fix(auth): fix RecipeActivity navigating back to splash and change getUserById query

--- a/app/src/main/res/navigation/auth_nav.xml
+++ b/app/src/main/res/navigation/auth_nav.xml
@@ -9,6 +9,7 @@
         android:id="@+id/splashFragment"
         android:name="me.hossamohsen.recipeapp.ui.fragments.splash.SplashFragment"
         android:label="fragment_splash"
+        android:noHistory="true"
         tools:layout="@layout/fragment_splash" >
         <action
             android:id="@+id/action_splashFragment_to_loginFragment"
@@ -32,7 +33,8 @@
         <action
             android:id="@+id/action_loginFragment_to_recipeActivity"
             app:destination="@id/recipeActivity"
-            app:popUpTo="@id/auth_nav" />
+            app:popUpTo="@id/auth_nav"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
