--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:title="About Creator" />
-    <item android:title="Logout" />
+    <item
+        android:id="@+id/menu_about_creator"
+        android:title="@string/about_creator" />
+    <item
+        android:id="@+id/menu_logout"
+        android:title="@string/logout" />
 </menu>
