feat(home): setup bottom nav and create fragments skeletons

--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -25,8 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="?attr/actionBarSize"
-                app:menu="@menu/app_menu"
-                app:title="@string/app_name" />
+                app:menu="@menu/app_menu" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
