--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,15 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/homeFragment"
         android:icon="@drawable/home_24"
         android:enabled="true"
-        android:title="Home" />
+        android:title="@string/home" />
     <item
+        android:id="@+id/searchFragment"
         android:icon="@drawable/search_24"
         android:enabled="true"
-        android:title="Search" />
+        android:title="@string/search" />
     <item
+        android:id="@+id/favoriteFragment"
         android:icon="@drawable/favorite_24"
         android:enabled="true"
-        android:title="Favourites" />
+        android:title="@string/favourites" />
 </menu>
