--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,7 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/homeChipGroup"
+            app:singleSelection="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:singleLine="true" />
